Bug 514835 - kunifiedpush-distributor crashes on session start
Summary: kunifiedpush-distributor crashes on session start
Status: RESOLVED FIXED
Alias: None
Product: kunifiedpush
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: git-master
Platform: Compiled Sources Linux
: NOR crash (vote)
Target Milestone: ---
Assignee: Carl Schwan
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2026-01-19 16:50 UTC by Nicolas Fella
Modified: 2026-01-21 17:28 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report: https://crash-reports.kde.org/organizations/kde/issues/352540/events/12def343416847df8243904fc7bc8c93/


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Fella 2026-01-19 16:50:13 UTC
Application: kunifiedpush-distributor (26.03.70)
 (Compiled from sources)
ApplicationNotResponding [ANR]: false
Qt Version: 6.11.0
Frameworks Version: 6.23.0
Operating System: Linux 6.18.5-200.fc43.x86_64 x86_64
Windowing System: Wayland
Distribution: "Fedora Linux 43 (KDE Plasma Desktop Edition)"
DrKonqi: 6.6.80 [CoredumpBackend]

-- Information about the crash:


The crash can be reproduced every time.

-- Backtrace:
Application: kunifiedpush-distributor (kunifiedpush-distributor), signal: Segmentation fault
Content of s_kcrashErrorMessage: std::unique_ptr<char []> = {get() = 0x0}
[New LWP 4369]
[New LWP 4374]
[New LWP 4442]
[New LWP 4430]
[New LWP 4435]
[New LWP 4439]
[New LWP 4436]
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib64/libthread_db.so.1".
Core was generated by `/home/nico/kde/usr/bin/kunifiedpush-distributor'.
Program terminated with signal SIGSEGV, Segmentation fault.
#0  __pthread_kill_implementation (threadid=<optimized out>, signo=signo@entry=11, no_tid=no_tid@entry=0) at pthread_kill.c:44
44	      return INTERNAL_SYSCALL_ERROR_P (ret) ? INTERNAL_SYSCALL_ERRNO (ret) : 0;
[Current thread is 1 (Thread 0x7f52f198fe40 (LWP 4369))]
Using eu-unstrip to resolve modules.

[Current thread is 1 (Thread 0x7f52f198fe40 (LWP 4369))]

Thread 7 (Thread 0x7f52e21bf6c0 (LWP 4436)):
#0  __syscall_cancel_arch () at ../sysdeps/unix/sysv/linux/x86_64/syscall_cancel.S:56
#1  0x00007f52f667bc3c in __internal_syscall_cancel (a1=<optimized out>, a2=<optimized out>, a3=<optimized out>, a4=<optimized out>, a5=a5@entry=8, a6=a6@entry=0, nr=271) at cancellation.c:49
#2  0x00007f52f667bc84 in __syscall_cancel (a1=<optimized out>, a2=<optimized out>, a3=<optimized out>, a4=<optimized out>, a5=a5@entry=8, a6=a6@entry=0, nr=271) at cancellation.c:75
#3  0x00007f52f66f56c6 in __GI_ppoll (fds=fds@entry=0x7f52d8000be0, nfds=nfds@entry=1, timeout=<optimized out>, timeout@entry=0x0, sigmask=sigmask@entry=0x0) at ../sysdeps/unix/sysv/linux/ppoll.c:42
#4  0x00007f52f50f42e0 in ppoll (__fds=0x7f52d8000be0, __nfds=1, __timeout=0x0, __ss=0x0) at /usr/include/bits/poll2.h:101
#5  g_main_context_poll_unlocked (priority=<optimized out>, context=0x3309b690, timeout_usec=<optimized out>, fds=0x7f52d8000be0, n_fds=1) at ../glib/gmain.c:4811
#6  g_main_context_iterate_unlocked (context=context@entry=0x3309b690, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/gmain.c:4485
#7  0x00007f52f50f43a3 in g_main_context_iteration (context=0x3309b690, may_block=may_block@entry=1) at ../glib/gmain.c:4556
#8  0x00007f52f50f43f1 in glib_worker_main (data=<optimized out>) at ../glib/gmain.c:6764
#9  0x00007f52f511f6c2 in g_thread_proxy (data=0x334803e0) at ../glib/gthread.c:893
#10 0x00007f52f667f464 in start_thread (arg=<optimized out>) at pthread_create.c:448
#11 0x00007f52f67025ac in __GI___clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78

Thread 6 (Thread 0x7f52e19be6c0 (LWP 4439)):
#0  __syscall_cancel_arch () at ../sysdeps/unix/sysv/linux/x86_64/syscall_cancel.S:56
#1  0x00007f52f667bc3c in __internal_syscall_cancel (a1=<optimized out>, a2=<optimized out>, a3=<optimized out>, a4=<optimized out>, a5=a5@entry=8, a6=a6@entry=0, nr=271) at cancellation.c:49
#2  0x00007f52f667bc84 in __syscall_cancel (a1=<optimized out>, a2=<optimized out>, a3=<optimized out>, a4=<optimized out>, a5=a5@entry=8, a6=a6@entry=0, nr=271) at cancellation.c:75
#3  0x00007f52f66f56c6 in __GI_ppoll (fds=fds@entry=0x7f52cc000c20, nfds=nfds@entry=3, timeout=<optimized out>, timeout@entry=0x0, sigmask=sigmask@entry=0x0) at ../sysdeps/unix/sysv/linux/ppoll.c:42
#4  0x00007f52f50f42e0 in ppoll (__fds=0x7f52cc000c20, __nfds=3, __timeout=0x0, __ss=0x0) at /usr/include/bits/poll2.h:101
#5  g_main_context_poll_unlocked (priority=<optimized out>, context=0x330b1930, timeout_usec=<optimized out>, fds=0x7f52cc000c20, n_fds=3) at ../glib/gmain.c:4811
#6  g_main_context_iterate_unlocked (context=0x330b1930, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/gmain.c:4485
#7  0x00007f52f50f449f in g_main_loop_run (loop=0x33489dd0) at ../glib/gmain.c:4695
#8  0x00007f52f1ef7f92 in gdbus_shared_thread_func (user_data=0x3348b450) at ../gio/gdbusprivate.c:284
#9  0x00007f52f511f6c2 in g_thread_proxy (data=0x33489df0) at ../glib/gthread.c:893
#10 0x00007f52f667f464 in start_thread (arg=<optimized out>) at pthread_create.c:448
#11 0x00007f52f67025ac in __GI___clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78

Thread 5 (Thread 0x7f52e29c06c0 (LWP 4435)):
#0  syscall () at ../sysdeps/unix/sysv/linux/x86_64/syscall.S:38
#1  0x00007f52f511652b in g_cond_wait_impl (cond=0x330ae3a8, mutex=0x330ae3a0) at ../glib/gthread-posix.c:1026
#2  g_cond_wait (cond=0x330ae3a8, mutex=0x330ae3a0) at ../glib/gthread.c:1686
#3  0x00007f52f50b41ac in g_async_queue_pop_intern_unlocked (queue=0x330ae3a0, wait=1, end_time=-1) at ../glib/gasyncqueue.c:376
#4  0x00007f52f511fb74 in g_thread_pool_spawn_thread (data=<optimized out>) at ../glib/gthreadpool.c:297
#5  0x00007f52f511f6c2 in g_thread_proxy (data=0x334801a0) at ../glib/gthread.c:893
#6  0x00007f52f667f464 in start_thread (arg=<optimized out>) at pthread_create.c:448
#7  0x00007f52f67025ac in __GI___clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78

Thread 4 (Thread 0x7f52e31fe6c0 (LWP 4430)):
#0  __syscall_cancel_arch () at ../sysdeps/unix/sysv/linux/x86_64/syscall_cancel.S:56
#1  0x00007f52f667bc3c in __internal_syscall_cancel (a1=<optimized out>, a2=<optimized out>, a3=<optimized out>, a4=<optimized out>, a5=a5@entry=8, a6=a6@entry=0, nr=271) at cancellation.c:49
#2  0x00007f52f667bc84 in __syscall_cancel (a1=<optimized out>, a2=<optimized out>, a3=<optimized out>, a4=<optimized out>, a5=a5@entry=8, a6=a6@entry=0, nr=271) at cancellation.c:75
#3  0x00007f52f66f56c6 in __GI_ppoll (fds=fds@entry=0x7f52d4001510, nfds=nfds@entry=1, timeout=<optimized out>, timeout@entry=0x7f52e31fd5c0, sigmask=sigmask@entry=0x0) at ../sysdeps/unix/sysv/linux/ppoll.c:42
#4  0x00007f52f50f42e0 in ppoll (__fds=0x7f52d4001510, __nfds=1, __timeout=0x7f52e31fd5c0, __ss=0x0) at /usr/include/bits/poll2.h:101
#5  g_main_context_poll_unlocked (priority=<optimized out>, context=0x7f52d4000e00, timeout_usec=<optimized out>, fds=0x7f52d4001510, n_fds=1) at ../glib/gmain.c:4811
#6  g_main_context_iterate_unlocked (context=context@entry=0x7f52d4000e00, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/gmain.c:4485
#7  0x00007f52f50f43a3 in g_main_context_iteration (context=0x7f52d4000e00, may_block=1) at ../glib/gmain.c:4556
#8  0x00007f52f7187718 in QEventDispatcherGlib::processEvents (this=0x7f52d4000ce0, flags=...) at /home/nico/workspace/qt6/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:399
#9  0x00007f52f6e143cb in QEventLoop::exec (this=this@entry=0x7f52e31fd720, flags=..., flags@entry=...) at /home/nico/workspace/qt6/qtbase/src/corelib/global/qflags.h:77
#10 0x00007f52f6f500b2 in QThread::exec (this=<optimized out>) at /home/nico/workspace/qt6/qtbase/src/corelib/thread/qthread.cpp:672
#11 0x00007f52f70205be in QThreadPrivate::start (arg=0x33473260) at /home/nico/workspace/qt6/qtbase/src/corelib/thread/qthread_unix.cpp:466
#12 0x00007f52f667f464 in start_thread (arg=<optimized out>) at pthread_create.c:448
#13 0x00007f52f67025ac in __GI___clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78

Thread 3 (Thread 0x7f52e11bd6c0 (LWP 4442)):
#0  __syscall_cancel_arch () at ../sysdeps/unix/sysv/linux/x86_64/syscall_cancel.S:56
#1  0x00007f52f667bc3c in __internal_syscall_cancel (a1=<optimized out>, a2=<optimized out>, a3=a3@entry=0, a4=<optimized out>, a5=a5@entry=0, a6=a6@entry=4294967295, nr=202) at cancellation.c:49
#2  0x00007f52f667c2ac in __futex_abstimed_wait_common64 (private=0, futex_word=0x7f52d40045c8, expected=0, op=<optimized out>, abstime=0x7f52e11bc640, cancel=true) at futex-internal.c:57
#3  __futex_abstimed_wait_common (futex_word=futex_word@entry=0x7f52d40045c8, expected=expected@entry=0, clockid=clockid@entry=1, abstime=abstime@entry=0x7f52e11bc640, private=private@entry=0, cancel=cancel@entry=true) at futex-internal.c:87
#4  0x00007f52f667c30f in __GI___futex_abstimed_wait_cancelable64 (futex_word=futex_word@entry=0x7f52d40045c8, expected=expected@entry=0, clockid=clockid@entry=1, abstime=abstime@entry=0x7f52e11bc640, private=private@entry=0) at futex-internal.c:139
#5  0x00007f52f667eb88 in __pthread_cond_wait_common (cond=0x7f52d40045a8, mutex=0x7f52d4004580, clockid=<optimized out>, abstime=0x7f52e11bc640) at pthread_cond_wait.c:421
#6  ___pthread_cond_timedwait64 (cond=0x7f52d40045a8, mutex=0x7f52d4004580, abstime=0x7f52e11bc640) at pthread_cond_wait.c:478
#7  0x00007f52f702a0d2 in QWaitConditionPrivate::wait_relative (this=<optimized out>, deadline=...) at /home/nico/workspace/qt6/qtbase/src/corelib/thread/qwaitcondition_unix.cpp:58
#8  QWaitConditionPrivate::wait (this=0x7f52d4004580, deadline=...) at /home/nico/workspace/qt6/qtbase/src/corelib/thread/qwaitcondition_unix.cpp:66
#9  QWaitCondition::wait (this=this@entry=0x7f52d4004450, mutex=0x7f52d4003fe8, deadline=...) at /home/nico/workspace/qt6/qtbase/src/corelib/thread/qwaitcondition_unix.cpp:146
#10 0x00007f52f6f5482e in QThreadPoolThread::run (this=0x7f52d4004440) at /home/nico/workspace/qt6/qtbase/src/corelib/thread/qmutex.h:300
#11 0x00007f52f70205be in QThreadPrivate::start (arg=0x7f52d4004440) at /home/nico/workspace/qt6/qtbase/src/corelib/thread/qthread_unix.cpp:466
#12 0x00007f52f667f464 in start_thread (arg=<optimized out>) at pthread_create.c:448
#13 0x00007f52f67025ac in __GI___clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78

Thread 2 (Thread 0x7f52e39ff6c0 (LWP 4374)):
#0  __syscall_cancel_arch () at ../sysdeps/unix/sysv/linux/x86_64/syscall_cancel.S:56
#1  0x00007f52f667bc3c in __internal_syscall_cancel (a1=<optimized out>, a2=<optimized out>, a3=<optimized out>, a4=<optimized out>, a5=a5@entry=8, a6=a6@entry=0, nr=271) at cancellation.c:49
#2  0x00007f52f667bc84 in __syscall_cancel (a1=<optimized out>, a2=<optimized out>, a3=<optimized out>, a4=<optimized out>, a5=a5@entry=8, a6=a6@entry=0, nr=271) at cancellation.c:75
#3  0x00007f52f66f56c6 in __GI_ppoll (fds=fds@entry=0x7f52dc001420, nfds=nfds@entry=3, timeout=<optimized out>, timeout@entry=0x0, sigmask=sigmask@entry=0x0) at ../sysdeps/unix/sysv/linux/ppoll.c:42
#4  0x00007f52f50f42e0 in ppoll (__fds=0x7f52dc001420, __nfds=3, __timeout=0x0, __ss=0x0) at /usr/include/bits/poll2.h:101
#5  g_main_context_poll_unlocked (priority=<optimized out>, context=0x7f52dc000d00, timeout_usec=<optimized out>, fds=0x7f52dc001420, n_fds=3) at ../glib/gmain.c:4811
#6  g_main_context_iterate_unlocked (context=context@entry=0x7f52dc000d00, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/gmain.c:4485
#7  0x00007f52f50f43a3 in g_main_context_iteration (context=0x7f52dc000d00, may_block=1) at ../glib/gmain.c:4556
#8  0x00007f52f7187718 in QEventDispatcherGlib::processEvents (this=0x7f52dc000be0, flags=...) at /home/nico/workspace/qt6/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:399
#9  0x00007f52f6e143cb in QEventLoop::exec (this=this@entry=0x7f52e39fe6d0, flags=..., flags@entry=...) at /home/nico/workspace/qt6/qtbase/src/corelib/global/qflags.h:77
#10 0x00007f52f6f500b2 in QThread::exec (this=this@entry=0x7f52f77e8dc0 <QGlobalStatic<QtGlobalStatic::Holder<(anonymous namespace)::Q_QGS__q_manager> >::instance()::holder>) at /home/nico/workspace/qt6/qtbase/src/corelib/thread/qthread.cpp:672
#11 0x00007f52f772f97e in QDBusConnectionManager::run (this=0x7f52f77e8dc0 <QGlobalStatic<QtGlobalStatic::Holder<(anonymous namespace)::Q_QGS__q_manager> >::instance()::holder>) at /home/nico/workspace/qt6/qtbase/src/dbus/qdbusconnectionmanager.cpp:145
#12 0x00007f52f70205be in QThreadPrivate::start (arg=0x7f52f77e8dc0 <QGlobalStatic<QtGlobalStatic::Holder<(anonymous namespace)::Q_QGS__q_manager> >::instance()::holder>) at /home/nico/workspace/qt6/qtbase/src/corelib/thread/qthread_unix.cpp:466
#13 0x00007f52f667f464 in start_thread (arg=<optimized out>) at pthread_create.c:448
#14 0x00007f52f67025ac in __GI___clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78

Thread 1 (Thread 0x7f52f198fe40 (LWP 4369)):
[KCrash Handler]
#5  std::__atomic_base<int>::fetch_add (this=0xb0, __i=1, __m=std::memory_order_acq_rel) at /usr/include/c++/15/bits/atomic_base.h:629
#6  QAtomicOps<int>::ref<int> (_q_value=<error reading variable: Cannot access memory at address 0xb0>) at /home/nico/workspace/qt6/qtbase/src/corelib/thread/qatomic_cxx11.h:260
#7  QBasicAtomicInteger<int>::ref (this=0xb0) at /home/nico/workspace/qt6/qtbase/src/corelib/thread/qbasicatomic.h:48
#8  QDBusMessage::QDBusMessage (this=0x7fffdbb74c10, other=...) at /home/nico/workspace/qt6/qtbase/src/dbus/qdbusmessage.cpp:542
#9  0x00007f52f7765721 in QDBusMessage::operator= (this=this@entry=0x7fffdbb752f8, other=...) at /home/nico/workspace/qt6/qtbase/src/dbus/qdbusmessage.cpp:575
#10 0x0000000000414c2f in KUnifiedPush::Command::operator= (this=0x7fffdbb75258) at /home/nico/kde/src/kunifiedpush/src/distributor/command.h:16
#11 KUnifiedPush::Distributor::doProcessNextCommand (this=0x7fffdbb75220) at /home/nico/kde/src/kunifiedpush/src/distributor/distributor.cpp:522
#12 0x00007f52f6e6bfec in QObject::event (this=<optimized out>, e=<optimized out>) at /home/nico/workspace/qt6/qtbase/src/corelib/kernel/qobject.cpp:1479
#13 0x00007f52f6e04e2e in doNotify (receiver=<optimized out>, event=<optimized out>) at /home/nico/workspace/qt6/qtbase/src/corelib/kernel/qcoreapplication.cpp:1210
#14 QCoreApplication::notify (this=<optimized out>, receiver=<optimized out>, event=<optimized out>) at /home/nico/workspace/qt6/qtbase/src/corelib/kernel/qcoreapplication.cpp:1193
#15 QCoreApplication::notifyInternal2 (receiver=0x7fffdbb75220, event=0x330aebd0) at /home/nico/workspace/qt6/qtbase/src/corelib/kernel/qcoreapplication.cpp:1109
#16 0x00007f52f6e094f3 in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x32ff8550) at /home/nico/workspace/qt6/qtbase/src/corelib/kernel/qcoreapplication.cpp:1904
#17 0x00007f52f7187fd7 in postEventSourceDispatch (s=0x32ffa910) at /home/nico/workspace/qt6/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:246
#18 0x00007f52f50eb2a3 in g_main_dispatch (context=0x32ffa750) at ../glib/gmain.c:3565
#19 g_main_context_dispatch_unlocked (context=0x32ffa750) at ../glib/gmain.c:4425
#20 0x00007f52f50f41f8 in g_main_context_iterate_unlocked (context=context@entry=0x32ffa750, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/gmain.c:4490
#21 0x00007f52f50f43a3 in g_main_context_iteration (context=0x32ffa750, may_block=1) at ../glib/gmain.c:4556
#22 0x00007f52f7187718 in QEventDispatcherGlib::processEvents (this=0x32ffa6f0, flags=...) at /home/nico/workspace/qt6/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:399
#23 0x00007f52f6e143cb in QEventLoop::exec (this=this@entry=0x7fffdbb75120, flags=..., flags@entry=...) at /home/nico/workspace/qt6/qtbase/src/corelib/global/qflags.h:77
#24 0x00007f52f6e0e09a in QCoreApplication::exec () at /home/nico/workspace/qt6/qtbase/src/corelib/kernel/qcoreapplication.cpp:1452
#25 0x000000000040a151 in main (argc=<optimized out>, argv=0x7fffdbb754f8) at /home/nico/kde/src/kunifiedpush/src/distributor/main.cpp:39

Reported using DrKonqi
This report was filed against 'kde' because the product 'kunifiedpush-distributor' could not be located in Bugzilla. Add it to drkonqi's mappings file!
Comment 1 Volker Krause 2026-01-20 17:41:55 UTC
Git commit bcf7e05989dd6723ae870f388062ac910664f9a6 by Volker Krause.
Committed on 20/01/2026 at 17:41.
Pushed by vkrause into branch 'master'.

Force Command to be move-only

It was meant that way, and has to be that way for the QDBusMessage it
holds, but apparently wasn't used that way everywhere.

M  +6    -0    src/distributor/command.h
M  +5    -3    src/distributor/distributor.cpp

https://invent.kde.org/libraries/kunifiedpush/-/commit/bcf7e05989dd6723ae870f388062ac910664f9a6
Comment 2 Volker Krause 2026-01-21 17:28:12 UTC
Git commit 22826ba001353e569ad1d883e9b2bbec44563b62 by Volker Krause.
Committed on 21/01/2026 at 17:27.
Pushed by vkrause into branch 'release/25.12'.

Force Command to be move-only

It was meant that way, and has to be that way for the QDBusMessage it
holds, but apparently wasn't used that way everywhere.
(cherry picked from commit bcf7e05989dd6723ae870f388062ac910664f9a6)

M  +6    -0    src/distributor/command.h
M  +5    -3    src/distributor/distributor.cpp

https://invent.kde.org/libraries/kunifiedpush/-/commit/22826ba001353e569ad1d883e9b2bbec44563b62