Force Command to be move-only

It was meant that way, and has to be that way for the QDBusMessage it
holds, but apparently wasn't used that way everywhere.

BUG: 514835